<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/homa"
                    android:background="@drawable/menu_item_bg"
                    android:icon="@drawable/homa"
                    android:title="@string/home" />

                <item
                    android:id="@+id/message"
                    android:icon="@drawable/messagee"
                    android:title="@string/message" />

                <item
                    android:id="@+id/games"
                    android:icon="@drawable/games"
                    android:title="@string/games" />

                <item
                    android:id="@+id/pay"
                    android:icon="@drawable/pay"
                    android:title="@string/pay" />

                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/settings"
                    android:title="@string/setting"/>

                <item
                    android:id="@+id/steame"
                    android:icon="@drawable/camera"
                    android:title="@string/steeme" />

                <item
                    android:id="@+id/exit"
                    android:icon="@drawable/exit"
                    android:title="@string/clouse" />
            </menu>
        </item>
    </group>
</menu>