<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FragmentHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/fon_app"
    tools:context=".HomaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/hinit"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Здесь разместите ваши изображения -->

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/foto_profile"
                    android:src="@drawable/settings" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/clouse"
                    android:src="@drawable/settings"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/clouse"
                    android:src="@drawable/settings"
                    tools:src="@drawable/settings" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:src="@drawable/settings" />

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/foto_profile"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ytjbfd"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game2"
                    app:srcCompat="@drawable/game2"
                    tools:srcCompat="@drawable/game2" />

                <ImageView
                    android:id="@+id/nhfd"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game1"
                    app:srcCompat="@drawable/game1" />

                <ImageView
                    android:id="@+id/htgr"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game1"
                    app:srcCompat="@drawable/game1" />


                <ImageView
                    android:id="@+id/hytr"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game3"
                    app:srcCompat="@drawable/game3" />

                <ImageView
                    android:id="@+id/awe"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game2" />

                <ImageView
                    android:id="@+id/gtgt"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game2"
                    tools:ignore="DuplicateIds" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/app_name"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageVi"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game1"
                    app:srcCompat="@drawable/game1"
                    tools:srcCompat="@drawable/game1" />

                <ImageView
                    android:id="@+id/imageV"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game3"
                    app:srcCompat="@drawable/user"
                    tools:srcCompat="@drawable/game3" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/game2"
                    tools:ignore="DuplicateIds" />

                <ImageView
                    android:id="@+id/imag"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game1"
                    app:srcCompat="@drawable/game1" />

                <ImageView
                    android:id="@+id/ima"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game1"
                    app:srcCompat="@drawable/game1"
                    tools:ignore="DuplicateIds" />

                <ImageView
                    android:id="@+id/ib"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/game1"
                    app:srcCompat="@drawable/game1"
                    tools:ignore="DuplicateIds" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="201dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>